# Tex-Build

./: .gitignore  README.md  pyproject.toml
tex_build/: tex_build.py
